test/cli/test-validating-policy/envoy-jwt/request-empty.json
{
  "attributes": {
    "request": {
      "http": {
        "headers": {
          "authorization": "empty"
        }
      }
    }
  }
}
