test/cli/test-validating-policy/envoy-jwt/request.json
[
    {
      "attributes": {
        "request": {
          "http": {
            "headers": {
              "authorization": "empty"
            }
          }
        }
      }
    },
    {
      "attributes": {
        "request": {
          "http": {
            "headers": {
              "authorization": "bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjIyNDEwODE1MzksIm5iZiI6MTUxNDg1MTEzOSwicm9sZSI6Imd1ZXN0Iiwic3ViIjoiWVd4cFkyVT0ifQ.ja1bgvIt47393ba_WbSBm35NrUhdxM4mOVQN8iXz8lk"
            }
          }
        }
      }
    },
    {
      "attributes": {
        "request": {
          "http": {
            "headers": {
              "authorization": "bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjIyNDEwODE1MzksIm5iZiI6MTUxNDg1MTEzOSwicm9sZSI6ImFkbWluIiwic3ViIjoiWVd4cFkyVT0ifQ.veMeVDYlulTdieeX-jxFZ_tCmqQ_K8rwx2OktUHv5Z0"
            }
          }
        }
      }
    }
  ]
